--- a/package.json
+++ b/package.json
@@ -18,5 +18,14 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/vweevers/http-graceful"
+  },
+  "dependencies": {
+    "after": "^0.8.1",
+    "debug": "^2.1.0",
+    "http-close": "0.0.2",
+    "xtend": "^4.0.0"
+  },
+  "devDependencies": {
+    "tape": "^3.0.3"
   }
 }
